--- a/portfolio.html
+++ b/portfolio.html
@@ -17,140 +17,186 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <a href="./index.html" class="logo"
-        ><span class="logo-item">Web</span>Studio</a
-      >
-      <nav>
-        <ul class="list">
-          <li><a href="./index.html" class="link">Студия</a></li>
-          <li>
-            <a href="./portfolio.html" class="link is-active">Портфолио</a>
-          </li>
-          <li><a href="" class="link">Контакты</a></li>
-        </ul>
-      </nav>
-      <ul class="list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="contact-list"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="contact-list">+38 096 111 11 11</a>
-        </li>
-      </ul>
-    </header>
-    <main>
-      <section>
-        <h1>Наши работы</h1>
-        <ul class="list">
-          <li><button type="button" class="portfolio-button">Все</button></li>
-          <li>
-            <button type="button" class="portfolio-button">Веб-сайты</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-button">Приложения</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-button">Дизайн</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-button">Маркетинг</button>
-          </li>
-        </ul>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/portfolio/img1.jpg"
-              alt="Ноутбук с сайтом"
-              width="370"
-            />
-            <h2 class="portfolio-title">Технокряк</h2>
-            <p class="portfolio-text">Веб-сайт</p>
-          </li>
-
-          <li>
-            <img
-              src="./images/portfolio/img2.jpg"
-              alt="Игра в баскетбол"
-              width="370"
-            />
-            <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-            <p class="portfolio-text">Дизайн</p>
-          </li>
-
-          <li>
-            <img
-              src="./images/portfolio/img3.jpg"
-              alt="Логотип ресторана"
-              width="370"
-            />
-            <h2>Ресторан Seafood</h2>
-            <p class="portfolio-text">Приложение</p>
-          </li>
-
-          <li>
-            <img src="./images/portfolio/img4.jpg" alt="Наушники" width="370" />
-            <h2 class="portfolio-title">Проект Prime</h2>
-            <p class="portfolio-text">Маркетинг</p>
-          </li>
-
-          <li>
-            <img src="./images/portfolio/img5.jpg" alt="Коробки" width="370" />
-            <h2 class="portfolio-title">Проект Boxes</h2>
-            <p class="portfolio-text">Приложение</p>
-          </li>
-
-          <li>
-            <img
-              src="./images/portfolio/img6.jpg"
-              alt="Монитор с сайтом"
-              width="370"
-            />
-            <h2 class="portfolio-title">Inspiration has no Borders</h2>
-            <p class="portfolio-text">Веб-сайт</p>
-          </li>
-
-          <li>
-            <img src="./images/portfolio/img7.jpg" alt="Книга" width="370" />
-            <h2 class="portfolio-title">Издание Limited Edition</h2>
-            <p class="portfolio-text">Дизайн</p>
-          </li>
-
-          <li>
-            <img src="./images/portfolio/img8.jpg" alt="Этикетка" width="370" />
-            <h2 class="portfolio-title">Проект LAB</h2>
-            <p class="portfolio-text">Маркетинг</p>
-          </li>
-
-          <li>
-            <img src="./images/portfolio/img9.jpg" alt="Ноутбук" width="370" />
-            <h2 class="portfolio-title">Growing Business</h2>
-            <p class="portfolio-text">Приложение</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer class="footer-bcg">
-      <a href="./index.html" class="footer-logo"
-        ><span class="logo-item">Web</span>Studio</a
-      >
-      <address class="address">
-        <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
-        <ul class="list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="footer-contacts"
+    <header class="header-page">
+      <div class="container">
+        <a href="./index.html" class="logo"
+          ><span class="logo-item">Web</span>Studio</a
+        >
+        <nav class="navigation">
+          <ul class="menu list">
+            <li class="menu-item">
+              <a href="./index.html" class="link">Студия</a>
+            </li>
+            <li class="menu-item">
+              <a href="./portfolio.html" class="link is-active">Портфолио</a>
+            </li>
+            <li class="menu-item"><a href="" class="link">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="menu list">
+          <li class="menu-item">
+            <a href="mailto:info@devstudio.com" class="contact-list"
               >info@devstudio.com</a
             >
           </li>
-          <li>
-            <a href="tel:+380961111111" class="footer-contacts"
+          <li class="menu-item">
+            <a href="tel:+380961111111" class="contact-list"
               >+38 096 111 11 11</a
             >
           </li>
         </ul>
-      </address>
+      </div>
+    </header>
+    <main>
+      <section class="section">
+        <div class="container">
+          <h1 class="visually-hidden">Наши работы</h1>
+          <ul class="list btn-list">
+            <li class="btn-item">
+              <button type="button" class="portfolio-button is-active">
+                Все
+              </button>
+            </li>
+            <li class="btn-item">
+              <button type="button" class="portfolio-button">Веб-сайты</button>
+            </li>
+            <li class="btn-item">
+              <button type="button" class="portfolio-button">Приложения</button>
+            </li>
+            <li class="btn-item">
+              <button type="button" class="portfolio-button">Дизайн</button>
+            </li>
+            <li class="btn-item">
+              <button type="button" class="portfolio-button">Маркетинг</button>
+            </li>
+          </ul>
+          <ul class="list portfolio-list">
+            <li class="portfolio-element">
+              <img
+                src="./images/portfolio/img1.jpg"
+                alt="Ноутбук с сайтом"
+                width="370"
+              />
+              <div class="text-container">
+                <h2 class="portfolio-title">Технокряк</h2>
+                <p class="portfolio-text">Веб-сайт</p>
+              </div>
+            </li>
+
+            <li class="portfolio-element">
+              <img
+                src="./images/portfolio/img2.jpg"
+                alt="Игра в баскетбол"
+                width="370"
+              />
+              <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+              <p class="portfolio-text">Дизайн</p>
+            </li>
+
+            <li class="portfolio-element">
+              <img
+                src="./images/portfolio/img3.jpg"
+                alt="Логотип ресторана"
+                width="370"
+              />
+              <div class="text-container">
+                <h2>Ресторан Seafood</h2>
+                <p class="portfolio-text">Приложение</p>
+              </div>
+            </li>
+
+            <li class="portfolio-element">
+              <img
+                src="./images/portfolio/img4.jpg"
+                alt="Наушники"
+                width="370"
+              />
+              <div class="text-container">
+                <h2 class="portfolio-title">Проект Prime</h2>
+                <p class="portfolio-text">Маркетинг</p>
+              </div>
+            </li>
+
+            <li class="portfolio-element">
+              <img
+                src="./images/portfolio/img5.jpg"
+                alt="Коробки"
+                width="370"
+              />
+              <div class="text-container">
+                <h2 class="portfolio-title">Проект Boxes</h2>
+                <p class="portfolio-text">Приложение</p>
+              </div>
+            </li>
+
+            <li class="portfolio-element">
+              <img
+                src="./images/portfolio/img6.jpg"
+                alt="Монитор с сайтом"
+                width="370"
+              />
+              <div class="text-container">
+                <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                <p class="portfolio-text">Веб-сайт</p>
+              </div>
+            </li>
+
+            <li class="portfolio-element">
+              <img src="./images/portfolio/img7.jpg" alt="Книга" width="370" />
+              <div class="text-container">
+                <h2 class="portfolio-title">Издание Limited Edition</h2>
+                <p class="portfolio-text">Дизайн</p>
+              </div>
+            </li>
+
+            <li class="portfolio-element">
+              <img
+                src="./images/portfolio/img8.jpg"
+                alt="Этикетка"
+                width="370"
+              />
+              <div class="text-container">
+                <h2 class="portfolio-title">Проект LAB</h2>
+                <p class="portfolio-text">Маркетинг</p>
+              </div>
+            </li>
+
+            <li class="portfolio-element">
+              <img
+                src="./images/portfolio/img9.jpg"
+                alt="Ноутбук"
+                width="370"
+              />
+              <div class="text-container">
+                <h2 class="portfolio-title">Growing Business</h2>
+                <p class="portfolio-text">Приложение</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <footer class="footer-bcg">
+      <div class="container">
+        <a href="./index.html" class="footer-logo"
+          ><span class="logo-item">Web</span>Studio</a
+        >
+        <address class="address">
+          <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
+          <ul class="list">
+            <li class="footer-list-item">
+              <a href="mailto:info@devstudio.com" class="footer-contacts"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="footer-contacts"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
