--- a/index.html
+++ b/index.html
@@ -129,6 +129,38 @@
               <div class="text-container">
                 <h3 class="team-sub-title">Игорь Демьяненко</h3>
                 <p class="team-text">Product Designer</p>
+                <ul class="soc-icons">
+                  <li class="soc-icons-item">
+                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                      <svg class="soc-icons-svg">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-icons-item">
+                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                      <svg class="soc-icons-svg">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-icons-item">
+                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                      <svg class="soc-icons-svg">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-icons-item">
+                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                      <svg class="soc-icons-svg">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              
+
               </div>
             </li>
             <li class="list-item team-item">
@@ -136,6 +168,36 @@
               <div class="text-container">
                 <h3 class="team-sub-title">Ольга Репина</h3>
                 <p class="team-text">Frontend Developer</p>
+                <ul class="soc-icons">
+                  <li class="soc-icons-item">
+                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                      <svg class="soc-icons-svg">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-icons-item">
+                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                      <svg class="soc-icons-svg">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-icons-item">
+                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                      <svg class="soc-icons-svg">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-icons-item">
+                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                      <svg class="soc-icons-svg">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list-item team-item">
@@ -143,6 +205,36 @@
               <div class="text-container">
                 <h3 class="team-sub-title">Николай Тарасов</h3>
                 <p class="team-text">Marketing</p>
+                <ul class="soc-icons">
+                  <li class="soc-icons-item">
+                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                      <svg class="soc-icons-svg">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-icons-item">
+                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                      <svg class="soc-icons-svg">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-icons-item">
+                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                      <svg class="soc-icons-svg">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-icons-item">
+                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                      <svg class="soc-icons-svg">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list-item team-item">
@@ -150,8 +242,51 @@
               <div class="text-container">
                 <h3 class="team-sub-title">Михаил Ермаков</h3>
                 <p class="team-text">UI Designer</p>
+                <ul class="soc-icons">
+                  <li class="soc-icons-item">
+                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                      <svg class="soc-icons-svg">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-icons-item">
+                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                      <svg class="soc-icons-svg">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-icons-item">
+                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                      <svg class="soc-icons-svg">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-icons-item">
+                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                      <svg class="soc-icons-svg">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section">
+        <div class="container">
+          <h2 class="title">Постоянные клиенты</h2>
+          <ul class="list">
+            <li><a href=""><svg><use href="./image/sprite.svg#icon-logo1"></use></svg></a></li>
+            <li><a href=""><svg><use href="./image/sprite.svg#icon-logo2"></use></svg></a></li>
+            <li><a href=""><svg><use href="./image/sprite.svg#icon-logo3"></use></svg></a></li>
+            <li><a href=""><svg><use href="./image/sprite.svg#icon-logo4"></use></svg></a></li>
+            <li><a href=""><svg><use href="./image/sprite.svg#icon-logo5"></use></svg></a></li>
+            <li><a href=""><svg><use href="./image/sprite.svg#icon-logo6"></use></svg></a></li>
           </ul>
         </div>
       </section>
