--- a/index.html
+++ b/index.html
@@ -35,13 +35,19 @@
         </nav>
         <ul class="menu list">
           <li class="menu-item">
-            <a href="mailto:info@devstudio.com" class="contact-list"
-              >info@devstudio.com</a
+            <a href="mailto:info@devstudio.com" class="contact-list">
+              <svg class="adress-icon" width="16px" height="12px">
+                <use href="./images/sprite.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="menu-item">
             <a href="tel:+380961111111" class="contact-list"
-              >+38 096 111 11 11</a
+              ><svg class="adress-icon" width="10px" height="16px">
+                <use href="./images/sprite.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -59,6 +65,11 @@
           <h2 class="visually-hidden">Наши преимущества</h2>
           <ul class="list list-container">
             <li class="list-item">
+              <div class="icon-box">
+                <svg class="adv-icon">
+                  <use href="./images/sprite.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="sub-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по
@@ -66,6 +77,11 @@
               </p>
             </li>
             <li class="list-item">
+              <div class="icon-box">
+                <svg class="adv-icon">
+                  <use href="./images/sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="sub-title">ПУНКТУАЛЬНОСТЬ</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения
@@ -73,6 +89,11 @@
               </p>
             </li>
             <li class="list-item">
+              <div class="icon-box">
+                <svg class="adv-icon">
+                  <use href="./images/sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="sub-title">ПЛАНИРОВАНИЕ</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной
@@ -80,6 +101,11 @@
               </p>
             </li>
             <li class="list-item">
+              <div class="icon-box">
+                <svg class="adv-icon">
+                  <use href="./images/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="sub-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -131,36 +157,54 @@
                 <p class="team-text">Product Designer</p>
                 <ul class="soc-icons">
                   <li class="soc-icons-item">
-                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                    <a
+                      class="soc-icons-link"
+                      href=""
+                      target="_blank"
+                      rel="noonpener noreferer"
+                    >
                       <svg class="soc-icons-svg">
                         <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icons-item">
-                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                    <a
+                      class="soc-icons-link"
+                      href=""
+                      target="_blank"
+                      rel="noonpener noreferer"
+                    >
                       <svg class="soc-icons-svg">
                         <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icons-item">
-                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                    <a
+                      class="soc-icons-link"
+                      href=""
+                      target="_blank"
+                      rel="noonpener noreferer"
+                    >
                       <svg class="soc-icons-svg">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icons-item">
-                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                    <a
+                      class="soc-icons-link"
+                      href=""
+                      target="_blank"
+                      rel="noonpener noreferer"
+                    >
                       <svg class="soc-icons-svg">
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
                 </ul>
-              
-
               </div>
             </li>
             <li class="list-item team-item">
@@ -170,28 +214,48 @@
                 <p class="team-text">Frontend Developer</p>
                 <ul class="soc-icons">
                   <li class="soc-icons-item">
-                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                    <a
+                      class="soc-icons-link"
+                      href=""
+                      target="_blank"
+                      rel="noonpener noreferer"
+                    >
                       <svg class="soc-icons-svg">
                         <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icons-item">
-                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                    <a
+                      class="soc-icons-link"
+                      href=""
+                      target="_blank"
+                      rel="noonpener noreferer"
+                    >
                       <svg class="soc-icons-svg">
                         <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icons-item">
-                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                    <a
+                      class="soc-icons-link"
+                      href=""
+                      target="_blank"
+                      rel="noonpener noreferer"
+                    >
                       <svg class="soc-icons-svg">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icons-item">
-                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                    <a
+                      class="soc-icons-link"
+                      href=""
+                      target="_blank"
+                      rel="noonpener noreferer"
+                    >
                       <svg class="soc-icons-svg">
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
@@ -207,28 +271,48 @@
                 <p class="team-text">Marketing</p>
                 <ul class="soc-icons">
                   <li class="soc-icons-item">
-                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                    <a
+                      class="soc-icons-link"
+                      href=""
+                      target="_blank"
+                      rel="noonpener noreferer"
+                    >
                       <svg class="soc-icons-svg">
                         <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icons-item">
-                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                    <a
+                      class="soc-icons-link"
+                      href=""
+                      target="_blank"
+                      rel="noonpener noreferer"
+                    >
                       <svg class="soc-icons-svg">
                         <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icons-item">
-                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                    <a
+                      class="soc-icons-link"
+                      href=""
+                      target="_blank"
+                      rel="noonpener noreferer"
+                    >
                       <svg class="soc-icons-svg">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icons-item">
-                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                    <a
+                      class="soc-icons-link"
+                      href=""
+                      target="_blank"
+                      rel="noonpener noreferer"
+                    >
                       <svg class="soc-icons-svg">
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
@@ -244,28 +328,48 @@
                 <p class="team-text">UI Designer</p>
                 <ul class="soc-icons">
                   <li class="soc-icons-item">
-                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                    <a
+                      class="soc-icons-link"
+                      href=""
+                      target="_blank"
+                      rel="noonpener noreferer"
+                    >
                       <svg class="soc-icons-svg">
                         <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icons-item">
-                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                    <a
+                      class="soc-icons-link"
+                      href=""
+                      target="_blank"
+                      rel="noonpener noreferer"
+                    >
                       <svg class="soc-icons-svg">
                         <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icons-item">
-                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                    <a
+                      class="soc-icons-link"
+                      href=""
+                      target="_blank"
+                      rel="noonpener noreferer"
+                    >
                       <svg class="soc-icons-svg">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-icons-item">
-                    <a class="soc-icons-link" href="" target="_blank" rel="noonpener noreferer">
+                    <a
+                      class="soc-icons-link"
+                      href=""
+                      target="_blank"
+                      rel="noonpener noreferer"
+                    >
                       <svg class="soc-icons-svg">
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
@@ -280,37 +384,146 @@
       <section class="section">
         <div class="container">
           <h2 class="title">Постоянные клиенты</h2>
-          <ul class="list">
-            <li><a href=""><svg><use href="./image/sprite.svg#icon-logo1"></use></svg></a></li>
-            <li><a href=""><svg><use href="./image/sprite.svg#icon-logo2"></use></svg></a></li>
-            <li><a href=""><svg><use href="./image/sprite.svg#icon-logo3"></use></svg></a></li>
-            <li><a href=""><svg><use href="./image/sprite.svg#icon-logo4"></use></svg></a></li>
-            <li><a href=""><svg><use href="./image/sprite.svg#icon-logo5"></use></svg></a></li>
-            <li><a href=""><svg><use href="./image/sprite.svg#icon-logo6"></use></svg></a></li>
+          <ul class="list client-list">
+            <li>
+              <a class="client-link" href=""
+                ><svg class="client-icon">
+                  <use
+                    href="./images/sprite.svg#icon-logo1"
+                    target="_blank"
+                    rel="noonpener noreferer"
+                  ></use></svg
+              ></a>
+            </li>
+            <li>
+              <a
+                class="client-link"
+                href=""
+                target="_blank"
+                rel="noonpener noreferer"
+                ><svg class="client-icon">
+                  <use href="./images/sprite.svg#icon-logo2"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a
+                class="client-link"
+                href=""
+                target="_blank"
+                rel="noonpener noreferer"
+                ><svg class="client-icon">
+                  <use href="./images/sprite.svg#icon-logo3"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a
+                class="client-link"
+                href=""
+                target="_blank"
+                rel="noonpener noreferer"
+                ><svg class="client-icon">
+                  <use href="./images/sprite.svg#icon-logo4"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a
+                class="client-link"
+                href=""
+                target="_blank"
+                rel="noonpener noreferer"
+                ><svg class="client-icon">
+                  <use href="./images/sprite.svg#icon-logo5"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a
+                class="client-link"
+                href=""
+                target="_blank"
+                rel="noonpener noreferer"
+                ><svg class="client-icon">
+                  <use href="./images/sprite.svg#icon-logo6"></use></svg
+              ></a>
+            </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="footer-bcg">
-      <div class="container">
-        <a href="./index.html" class="footer-logo"
-          ><span class="logo-item">Web</span>Studio</a
-        >
-        <address class="address">
-          <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
-          <ul class="list">
-            <li class="footer-list-item">
-              <a href="mailto:info@devstudio.com" class="footer-contacts"
-                >info@devstudio.com</a
+      <div class="container footer-container">
+        <div>
+          <a href="./index.html" class="footer-logo"
+            ><span class="logo-item">Web</span>Studio</a
+          >
+          <address class="address">
+            <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
+            <ul class="list">
+              <li class="footer-list-item">
+                <a href="mailto:info@devstudio.com" class="footer-contacts"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+380961111111" class="footer-contacts"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-socials">
+          <p class="footer-socials-text">ПРИСОЕДИНЯЙТЕСЬ</p>
+          <ul class="footer-socials-icons">
+            <li class="footer-socials-icons-item">
+              <a
+                class="footer-socials-icons-link"
+                href=""
+                target="_blank"
+                rel="noonpener noreferer"
               >
+                <svg class="footer-socials-icons-svg">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a href="tel:+380961111111" class="footer-contacts"
-                >+38 096 111 11 11</a
+            <li class="soc-icons-item">
+              <a
+                class="footer-socials-icons-link"
+                href=""
+                target="_blank"
+                rel="noonpener noreferer"
               >
+                <svg class="footer-socials-icons-svg">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-icons-item">
+              <a
+                class="footer-socials-icons-link"
+                href=""
+                target="_blank"
+                rel="noonpener noreferer"
+              >
+                <svg class="footer-socials-icons-svg">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-icons-item">
+              <a
+                class="footer-socials-icons-link"
+                href=""
+                target="_blank"
+                rel="noonpener noreferer"
+              >
+                <svg class="footer-socials-icons-svg">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
